# deview

./: .deview.yaml.example  .dockerignore  .gitignore  Dockerfile  config.yaml.example  pyproject.toml
docs/: high-level-design.md
docs/guides/: local-embedding-setup.md
docs/phase-1-mcp-ingest-query/: design.md  plan.md
docs/phase-2-git-hook-rest-api/: design.md  plan.md
docs/phase-3-team-deploy/: design.md
docs/phase-4-review-automation/: design.md
docs/phase-5-ide-extension/: design.md
docs/phase-6-semantic-caching/: design.md
src/deview/: __init__.py  cli.py  config.py  scope.py  server.py
src/deview/embedding/: __init__.py  base.py  local.py  mistral.py  openai.py  voyage.py
src/deview/ingestion/: __init__.py  confluence.py  git.py  jira.py  manual.py  markdown.py
src/deview/storage/: chroma.py
src/deview/tools/: ingest.py  search.py  status.py  sync.py  write.py
tests/: test_cli.py  test_config.py  test_embedding.py  test_ingestion_confluence.py  test_ingestion_git.py  test_ingestion_jira.py  test_ingestion_markdown.py  test_integration.py  test_scope.py  test_storage.py  test_tools.py  test_tools_sync.py
